# Mosaic

./: config.py  pyproject.toml  readme.md  run.py
app/: __init__.py  cli.py  decorators.py  util.py
app/blueprints/: __init__.py
app/blueprints/admin/: forms.py  views.py
app/blueprints/auth/: forms.py  views.py
app/blueprints/blog/: __init__.py  errors.py  forms.py  request_hooks.py  views.py
app/models/: __init__.py  blog.py  category.py  comment.py  post.py  user.py
app/static/: package-lock.json  package.json
app/static/css/: base.css  dark-theme.css  light-theme.css
app/static/js/: createPost.js  index.js
app/templates/: _wrapper.html  layout.html
app/templates/admin/: edit-user-account.html
app/templates/auth/: forgot-password.html  login.html  register.html  reset-password.html  settings.html  unconfirmed.html
app/templates/auth/email/: confirm.html  confirm.txt  reset-password.html  reset-password.txt  update-email.html  update-email.txt
app/templates/blog/: create-blog.html  create-post.html  index.html  post.html  profile.html  view-blog.html
app/templates/errors/: 403.html  404.html  500.html
app/templates/fragments/: _flashed-msgs.html  _navbar.html  macros.html
data/: dev-data.sqlite
migrations/versions/: 27e31ed98b7f_.py  96853b7a2097_.py  9902e670bea0_.py
tests/: test_basics.py
tests/test_models/: test_role_model.py  test_user_model.py
